--- a/redux-products/package.json
+++ b/redux-products/package.json
@@ -11,7 +11,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.2",
